--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify-json/lucide": "^1.2.82",
     "@iconify-json/simple-icons": "^1.2.63",
     "@nuxt/ui": "^4.3.0",
+    "@tauri-apps/api": "^2.9.1",
     "nuxt": "^4.2.2"
   },
   "devDependencies": {
