--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/simple-icons": "^1.2.63",
     "@nuxt/ui": "^4.3.0",
     "@tauri-apps/api": "^2.9.1",
+    "@tauri-apps/plugin-store": "^2.4.1",
     "nuxt": "^4.2.2"
   },
   "devDependencies": {
